CSS: Fix cut of text in iframes of popup content
The overflow hidden removed in 72f8fd971dfae775e2416ee7b74cb04e0e52700a did cut of iframes and their content. However, it did introduce a scrollbar when the iframe is too big. Which is fixed here by adding a max-width of 100%.

There was a max-width but one with fixed pixel values before, which was removed in https://github.com/umap-project/umap/commit/345283782c45e3f565132f1ad0c2fa5c4b7d4043#diff-5470058378896897263b7a99e4226772660e09d5e9e51b530fffc6075b8e07bfL1299. 

The stylesheet-style's max-width will overwrite any width-specification given via the width-attribute on the iframe as well as width-conditions set as inline-styles. However, adding a inline max-width-style will overwrite the css-file specification due to higher css specificity.

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -1289,6 +1289,7 @@ a.add-datalayer:hover,
 }
 .umap-popup-content iframe {
     min-width: 310px;
+    max-width: 100%;
 }
 .umap-popup-content th,
 .umap-popup-content td {
